adding save button to panel heading

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,3 +2,11 @@
   background: blue;
   margin: 2%;
 }
+
+.save-article a{
+  float: left;
+	display: block;
+	width: 90%;
+	color: #fff;
+	padding-left: 10px;
+}
