pulling data from the save article button

--- a/views/partials/articles/article-block.handlebars
+++ b/views/partials/articles/article-block.handlebars
@@ -46,7 +46,7 @@
             <div class="panel-heading">
                 <div class="save-article">
                     <h3 class="panel-title">
-                    <a href="{{this.link}}">
+                    <a href="{{this.link}}" target="_blank">
                         {{this.title}}
                     </a>  
                     </h3>
