--- a/views/partials/buttons/save-an-article.handlebars
+++ b/views/partials/buttons/save-an-article.handlebars
@@ -1,1 +1,4 @@
-<button class="btn btn-success">Save Article</button>
+<button class="btn btn-success" id="saveart" data-id="{{_id}}">
+    <form action="/saved" method="POST"></form>
+    Save Article
+</button>
