--- a/views/partials/buttons/saved.handlebars
+++ b/views/partials/buttons/saved.handlebars
@@ -1,4 +1,6 @@
-{{#if saved}}
+<h1>Helloooo</h1>
+
+{{!-- {{#each saved}}
 <button class="btn add-note" data-id="{{_id}}">Add Note</button>
 <button class="btn delete-article" data-id="{{_id}}"> Delete Article</button>
 
@@ -6,7 +8,7 @@
 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" id="save" data-id="{{_id}}">Save Article</button>
 
-{{/if}}
+{{/each}}
 
 {{!-- <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
@@ -43,4 +45,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
