--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -8,14 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">NY Scraper</a>
+      <a class="navbar-brand" href="/">NY Scraper</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Saved Article</a></li>
+        <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="/saved">Saved Article</a></li>
           </ul>
         </li>
     </div><!-- /.navbar-collapse -->
