--- a/views/partials/buttons/save-an-article.handlebars
+++ b/views/partials/buttons/save-an-article.handlebars
@@ -1,4 +1,8 @@
-<button class="btn btn-success" id="saveart" data-id="{{_id}}">
-    <form action="/saved" method="POST"></form>
+{{!-- <a href='/saved/'> --}}
+<button name="save" type="button" class="btn btn-success" id="saveart" data-id="{{_id}}">
+    {{!-- {{saved: true}} --}}
+    {{!-- <form action="/saved/{{_id}}" method="POST" alert="I'm Here"></form> --}}
+    
     Save Article
 </button>
+{{!-- </a> --}}
