--- a/views/partials/buttons/saved.handlebars
+++ b/views/partials/buttons/saved.handlebars
@@ -1,6 +1,6 @@
 <h1>Helloooo</h1>
 
-{{!-- {{#each saved}}
+{{#each saved}}
 <button class="btn add-note" data-id="{{_id}}">Add Note</button>
 <button class="btn delete-article" data-id="{{_id}}"> Delete Article</button>
 
@@ -45,4 +45,4 @@
       </div>
     </div>
   </div>
-</div> --}}
+</div>
