--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,10 @@
 {{>nav/navbar}}
 
+<div class='header fixed'>
+</div>
+<div class='block-style'>
+</div>
+
 <div id="articles">
     {{#each articles}} {{>articles/article-block}}  {{/each}}
 </div>
