--- a/views/partials/articles/article-block.handlebars
+++ b/views/partials/articles/article-block.handlebars
@@ -43,10 +43,10 @@
     <div class="row">
         <div class="articles">
           <div class="panel panel-default">
-            <div class="panel-heading">
+            <div class="panel-heading" id='panel-headstyle'>
                 <div class="save-article">
                     <h3 class="panel-title">
-                    <a href="{{this.link}}" target="_blank">
+                    <a href="{{this.link}} " target="_blank">
                         {{this.title}}
                     </a>  
                     </h3>
