background color change

--- a/views/partials/buttons/saved.handlebars
+++ b/views/partials/buttons/saved.handlebars
@@ -1,6 +1,6 @@
 <h1>Helloooo</h1>
 
-{{#each saved}}
+{{#if saved}}
 <button class="btn add-note" data-id="{{_id}}">Add Note</button>
 <button class="btn delete-article" data-id="{{_id}}"> Delete Article</button>
 
@@ -8,7 +8,7 @@
 
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" id="save" data-id="{{_id}}">Save Article</button>
 
-{{/each}}
+{{/if}}
 
 {{!-- <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
