--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,8 +9,11 @@
 }
 #articles {
 	/* margin-top: 3%; */
-	/* background: url('https://images.unsplash.com/photo-1486551937199-baf066858de7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=578621a91f482227774ba0fd0d89b923&auto=format&fit=crop&w=1692&q=80'); */
-	background: rgb(99, 99, 99);
+	/* background: url('https://images.unsplash.com/photo-1486551937199-baf066858de7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=578621a91f482227774ba0fd0d89b923&auto=format&fit=crop&w=1692&q=80')  */
+	/* rgb(black,grey,black) */
+	/* ; */
+	/* background: rgb(99, 99, 99); */
+	background: rgba(0, 0, 0, 0.849);
 	background-size: contain;
 }
 .articles {
