getting data from saved route

--- a/views/partials/buttons/save-an-article.handlebars
+++ b/views/partials/buttons/save-an-article.handlebars
@@ -1,9 +1,11 @@
 {{!-- <a href='/saved/'> --}}
 <hr />
+{{!-- {{#each saved}} --}}
 <button name="save" type="button" class="btn btn-success" id="saveart" data-id="{{_id}}">
     {{!-- {{saved: true}} --}}
     {{!-- <form action="/saved/{{_id}}" method="POST" alert="I'm Here"></form> --}}
-    
+    {{!-- {{#each saved}} {{/each}} --}}
     Save Article
 </button>
+{{!-- {{/each}} --}}
 {{!-- </a> --}}
