--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="/saved/">Saved Article</a></li>
+        <li><a href="/saved">Saved Article</a></li>
           </ul>
         </li>
     </div><!-- /.navbar-collapse -->
